--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>taco-tuesday</artifactId>
+	<artifactId>taco</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>taco-tuesday</name>
 	<description>spring taco website</description>
